--- a/README
+++ b/README
@@ -10,4 +10,4 @@
 #+AUTHOR:  Marie-Hélène Burle
 #+EMAIL:   msb2@sfu.ca
 
-The list of R resources is available [[https://prosoitos.github.io/r_resources/r_resources.html][here]].
+The website is available [[https://prosoitos.github.io/r_resources/r_resources.html][here]].
