update html preamble to display favicons

--- a/README
+++ b/README
@@ -10,4 +10,4 @@
 #+AUTHOR:  Marie-Hélène Burle
 #+EMAIL:   msb2@sfu.ca
 
-The website is available [[https://prosoitos.github.io/r_resources/r_resources.html][here]].
+Website is available [[https://prosoitos.github.io/r_resources/r_resources.html][here]].
