--- a/r_resources.org
+++ b/r_resources.org
@@ -51,6 +51,10 @@ The on-line manual [[https://cran.r-project.org/doc/manuals/R-exts.html][Writing
 
 The books [[https://bookdown.org/yihui/rmarkdown/][R Markdown: The Definitive Guide by Yihui Xie, J. J. Allaire, and Garrett Grolemund]] and [[https://bookdown.org/yihui/bookdown/][bookdown: Authoring Books and Technical Documents with R Markdown by Yihui Xie]] cover the use of R Markdown.
 
+*** Text mining with R
+
+The book [[https://www.tidytextmining.com/][Text Mining with R by Julia Silge and David Robinson]].
+
 *** GIS in R
 
 The tutorials [[https://data.cdrc.ac.uk/tutorial/an-introduction-to-spatial-data-analysis-and-visualisation-in-r][An Introduction to Spatial Data Analysis and Visualisation in R by Guy Lansley and James Cheshire]] as well as the book [[https://geocompr.robinlovelace.net/][Geocomputation with R by Robin Lovelace, Jakub Nowosad, and Jannes Muenchow]] will teach you how to map data and conduct spacial data analysis in R or how to bridge R and [[https://www.qgis.org/en/site/][QGIS]].
@@ -63,7 +67,7 @@ The SFU Library [[https://www.lib.sfu.ca/find/other-materials/lynda][provides ac
 
 *** Others
 
-[[https://serialmentor.com/dataviz/][Fundamentals of Data Visualization by Claus O. Wilke]], [[https://www.tidytextmining.com/][Text Mining with R by Julia Silge and David Robinson]], [[https://tidyeval.tidyverse.org/][Tidy evaluation by Lionel Henry and Hadley Wickham]], [[https://cran.r-project.org/doc/FAQ/R-FAQ.html#Why-are-powers-of-negative-numbers-wrong_003f][R FAQ by Kurt Hornik]], [[http://varianceexplained.org/RData/][David Robinson's course]], [[https://csgillespie.github.io/efficientR/][Efficient R programming by Colin Gillespie and Robin Lovelace]], [[http://rdpeng.github.io/RProgDA/][Mastering Software Development in R by Roger D. Peng, Sean Kross, and Brooke Anderson]]...
+[[https://serialmentor.com/dataviz/][Fundamentals of Data Visualization by Claus O. Wilke]], [[https://tidyeval.tidyverse.org/][Tidy evaluation by Lionel Henry and Hadley Wickham]], [[https://cran.r-project.org/doc/FAQ/R-FAQ.html#Why-are-powers-of-negative-numbers-wrong_003f][R FAQ by Kurt Hornik]], [[http://varianceexplained.org/RData/][David Robinson's course]], [[https://csgillespie.github.io/efficientR/][Efficient R programming by Colin Gillespie and Robin Lovelace]], [[http://rdpeng.github.io/RProgDA/][Mastering Software Development in R by Roger D. Peng, Sean Kross, and Brooke Anderson]]...
 
 ** Resources at SFU
 
